tests/ui/pin_project/self-in-where-clause.stderr
error[E0411]: cannot find type `Self` in this scope
 --> $DIR/self-in-where-clause.rs:8:5
  |
8 |     Self: Trait, //~ ERROR cannot find type `Self` in this scope [E0411]
  |     ^^^^ `Self` is only available in impls, traits, and type definitions

error[E0277]: the trait bound `__Struct<'pin, T>: Trait` is not satisfied
 --> $DIR/self-in-where-clause.rs:5:1
  |
5 | #[pin_project]
  | ^^^^^^^^^^^^^-
  | |            |
  | |            required by `__Struct`
  | the trait `Trait` is not implemented for `__Struct<'pin, T>`

error[E0277]: the trait bound `__StructProjection<'pin, T>: Trait` is not satisfied
 --> $DIR/self-in-where-clause.rs:5:14
  |
5 | #[pin_project]
  |              ^
  |              |
  |              the trait `Trait` is not implemented for `__StructProjection<'pin, T>`
  |              required by `__StructProjection`

error[E0277]: the trait bound `__StructProjectionRef<'pin, T>: Trait` is not satisfied
 --> $DIR/self-in-where-clause.rs:5:14
  |
5 | #[pin_project]
  |              ^
  |              |
  |              the trait `Trait` is not implemented for `__StructProjectionRef<'pin, T>`
  |              required by `__StructProjectionRef`
